Closed Bug 504473 Opened 16 years ago Closed 16 years ago

FORWARD_NULL deref of mPresContext in nsEventStateManager::GetEventTarget

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(1 file)

coverity noticed that the first block carefully null checks and the second does not....
Attached patch patchSplinter Review
Attachment #388843 - Flags: review?(Olli.Pettay)
Attachment #388843 - Flags: superreview+
Attachment #388843 - Flags: review?(Olli.Pettay)
Attachment #388843 - Flags: review+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: