Bug 504473 FORWARD_NULL deref of mPresContext in nsEventStateManager::GetEventTarget r=smaug sr=smaug